--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,49 +1,51 @@
-   <div id ="main-container">
+<script src="js/login.js"></script>
 
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">
-                    
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav m-auto">
-                        <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
+<div id="main-container">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav m-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div id="main-modal">
+        <div class="modal-dialog text-center">
+            <div class="col-sm-8 main-section">
+                <div class="modal-content">
+                    <div class="col-12 user-img">
+                        <img src="./styles/images/rsz_user_avatar_2.png">
                     </div>
-                </nav>
-
-    <div id ="main-modal">
-    <div class ="modal-dialog text-center">
-        <div class ="col-sm-8 main-section">
-            <div class = "modal-content">
-                <div class = "col-12 user-img">
-                    <img src = "./styles/images/rsz_user_avatar_2.png">
-                </div>
-                <div class ="col-12 user-name">
-                    <h1>uWell</h1>
-                </div>
-                <div class = "col-12 form-input">
-                    <form>
-                        <div class ="form-group">
-                            <input type ="name" class = "form-control" placeholder ="Username">
-                        </div>
-                        <div class ="form-group">
-                            <input type ="password" class = "form-control" placeholder ="Password">
-                        </div>
-                        <button type ="submit" class="btn btn-success" id="logButt">Login</button>
-                    </form>
-                </div>
-                <div class ="col-12 link-part">
-                    <a href="#">Forgot Password?</a>
+                    <div class="col-12 user-name">
+                        <h1>uWell</h1>
+                    </div>
+                    <div class="col-12 form-input">
+                        <form>
+                            <div class="form-group">
+                                <input type="name" class="form-control" placeholder="Username">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn btn-success" id="logButt">Login</button>
+                        </form>
+                    </div>
+                    <div class="col-12 link-part">
+                        <a href="#">Forgot Password?</a>
+                    </div>
                 </div>
             </div>
         </div>
-        </div>  
     </div>
 
 
