--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -32,10 +32,10 @@
                     <div class="col-12 form-input">
                         <form>
                             <div class="form-group">
-                                <input type="name" class="form-control" placeholder="Username">
+                                <input id="login-email" type="name" class="form-control" placeholder="Username">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Password">
+                                <input id="login-password" type="password" class="form-control" placeholder="Password">
                             </div>
                             <button type="submit" class="btn btn-success" id="logButt">Login</button>
                         </form>
