--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,10 @@
+html, body {
+
+  max-height: 100%;
+  max-width: 100%;
+
+}
+
 #main-modal{
   
   margin-left: 150px;
@@ -18,11 +25,21 @@
   width: 150px;
   margin-bottom: 10px;
 
-}
+} 
 
 
 .item {
   float: left;
 
   margin: 10px;
+}
+
+#activiFeed {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 125px;
+  
+
 }
