--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,12 @@
+html, body, #main-container {
+
+  max-height: 100%;
+  max-width: 100%;
+  background-color: silver;
+  
+}
+
+/* main modal on login page */
 #main-modal{
   
   margin-left: 150px;
@@ -18,7 +27,7 @@
   width: 150px;
   margin-bottom: 10px;
 
-}
+} 
 
 
 .item {
@@ -26,3 +35,5 @@
 
   margin: 10px;
 }
+
+
