--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,6 @@
 <div id="main-container">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">
-
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav m-auto">
                 <li class="nav-item active">
@@ -18,6 +17,7 @@
             </ul>
         </div>
     </nav>
+    
 
     <div id="main-modal">
         <div class="modal-dialog text-center">
@@ -50,3 +50,5 @@
 
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
+</div>
