--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -37,7 +37,10 @@
                             <div class="form-group">
                                 <input id="login-password" type="password" class="form-control" placeholder="Password">
                             </div>
-                            <button type="submit" class="btn btn-success" id="logButt">Login</button>
+                            <div id="signupButt">
+                                    <button type="button" class="btn btn-secondary">Register</button>
+                                </div>
+                            <div class="g-signin2" data-onsuccess="onSignIn"></div>
                         </form>
                     </div>
                     <div class="col-12 link-part">
@@ -49,6 +52,6 @@
     </div>
 
 
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    
 
 </div>
