--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -40,11 +40,15 @@
                             <div id="signupButt">
                                     <button type="button" class="btn btn-secondary">Register</button>
                                 </div>
-                            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                            <div id="googButt">
+                                <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                                </div>
                         </form>
                     </div>
+                    <div id="forGot">
                     <div class="col-12 link-part">
                         <a href="#">Forgot Password?</a>
+                    </div>
                     </div>
                 </div>
             </div>
