--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,13 +14,6 @@ html, body, #main-container {
 
 }
 
-#signupButt {
-
-  padding-top: 5px;
-  justify-content: center;
-  
-}
-
 /* home page */
 
 #searchBar {
@@ -59,4 +52,26 @@ html, body, #main-container {
   padding-top: 5px;
   padding-left: 135px;
 
+}
+
+#profilePhoto {
+  width: 100%;
+  height: 100%;
+
+  margin: 10px;
+
+  border: lightblue solid;
+}
+
+#bioText {
+  margin: 10px;
+  color: navy;
+}
+
+#addFriendButton {
+  margin: 10px;
+
+  /* toggle visibility based on whether addFriend option is available*/
+  
+  /* visibility: hidden; */
 }
