--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,7 +14,7 @@ html, body, #main-container {
 
 }
 
-#signupButt {
+#registerButt {
 
   padding-top: 5px;
   
@@ -60,9 +60,15 @@ html, body, #main-container {
   
 }
 
-#activiFeed :hover{
+#listItem {
 
-  background-color: slategrey;
+  margin-top: 20px;
+
+}
+
+.list-group-item {
+
+  background-color: #c8d6e5;
 
 }
 
