--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -37,12 +37,10 @@
                             <div class="form-group">
                                 <input id="login-password" type="password" class="form-control" placeholder="Password">
                             </div>
-                            
-                            <div id="signupButt">
-        
+                            <div id="registerButt">
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Launch demo modal
+  Register
 </button>
 
 <!-- Modal -->
@@ -65,6 +63,8 @@
     </div>
   </div>
 </div>
+                            
+
                             
                             <div id="googButt">
                                 <div class="g-signin2" data-onsuccess="onSignIn"></div>
