added form to modal for new effort posting; need to add validation and form-clearing logic

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -35,8 +35,7 @@
 
 
     <div id="addFeed">
-        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalCenter" id="addfeedButt">Add
-            activity
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalCenter" id="addfeedButt">Add Effort
         </button>
 
         <!-- Modal -->
@@ -47,22 +46,54 @@
 </button> --}}
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">New Effort</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+
+        <form id="newPostForm">
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Headline (max 70 characters)</label>
+                <input class="form-control" id="headlineInput" maxlength="70" placeholder="Tell us what you did!">
+            </div>
+
+
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Description (max 280 characters)</label>
+                <textarea class="form-control" id="descriptionInput" rows="3" maxlength="280" placeholder="Tell us some more!"></textarea>
+            </div>        
+
+
+            <div class="form-group">
+                <label for="exampleFormControlSelect2">Categories (select one or more)</label>
+                <select multiple class="form-control" id="categoriesInput">
+                    <option>Body</option>
+                    <option>Charity</option>
+                    <option>Culture</option>
+                    <option>Education</option>
+                    <option>Friendship</option>
+                    <option>Spirit</option>
+                    <option>Volunteering</option>
+                </select>
+            </div>
+
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>  
+
+        </form>
+
       </div>
-      <div class="modal-footer">
+      {{!-- <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      </div> --}}
     </div>
   </div>
 </div>
