--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,7 +24,7 @@
             <div class="col-sm-8 main-section">
                 <div class="modal-content">
                     <div class="col-12 user-img">
-                        <img src="./styles/images/rsz_user_avatar_2.png">
+                        <img src="./styles/images/rsz_user_avatar_2.png" id="avaTar">
                     </div>
                     <div class="col-12 user-name">
                         <h1>uWell</h1>
