--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,6 @@
+<script src="js/home.js"></script>
+
+
 <div id="main-container">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">
