--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -48,12 +48,12 @@
 
 
     <div id="addFeed">
-        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalCenter"
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addEffortModal"
             id="addfeedButt">Add Effort
         </button>
 
 
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        <div class="modal fade" id="addEffortModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -94,7 +94,7 @@
                             </div>
 
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button id="addEffort" type="submit" class="btn btn-primary">Submit</button>
                             </div>
 
                         </form>
