--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="/profile">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -113,7 +113,7 @@
                 <a class="list-group-item list-group-item-action" id="listItem">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1" id="activiTitle">{{header}}</h5>
-                        <small>3 days ago</small>
+                        <small>{{updatedAt}}</small>
                     </div>
                     <p class="mb-1">{{description}}</p>
                 </a>
