--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -32,6 +32,7 @@
         <form class="form-inline my-2 my-lg-0" action="/search" method="POST" id="searchBar">
             <select placeholder="Search keyword..." class="form-control mr-sm-2" name="keyword" aria-label="Search"
                 name="city">
+                <option value="Search user">Search user</option>
                 <option value="body">Body</option>
                 <option value="charity">Charity</option>
                 <option value="culture">Culture</option>
@@ -40,7 +41,7 @@
                 <option value="spirit">Spirit</option>
                 <option value="volunteering">Volunteering</option>
             </select>
-            <input placeholder="Location..." class="form-control mr-sm-2" name="city" aria-label="Search">
+            <input placeholder="User or city" class="form-control mr-sm-2" name="city" aria-label="Search">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" id="searchButt">Search</button>
         </form>
     </div>
@@ -48,8 +49,8 @@
 
 
     <div id="addFeed">
-        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addEffortModal"
-            id="addfeedButt">Add Effort
+        <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addEffortModal" id="addfeedButt">Add
+            Effort
         </button>
 
 
@@ -68,8 +69,7 @@
                         <form id="newPostForm">
                             <div class="form-group">
                                 <label for="exampleFormControlInput1">Headline (max 70 characters)</label>
-                                <input class="form-control" id="headlineInput" maxlength="70"
-                                    placeholder="Tell us what you did!">
+                                <input class="form-control" id="headlineInput" maxlength="70" placeholder="Tell us what you did!">
                             </div>
 
 
