added editProfile modal to profile.handlebars; fixed some html in home.handlebars

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -100,7 +100,7 @@ html, body, #main-container {
   color: navy;
 }
 
-#addFriendButton {
+#addFriendButton,  #editProfileButton {
   margin: 10px;
 
   /* toggle visibility based on whether addFriend option is available*/
