added badge for user signed in

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -58,6 +58,13 @@ html, body, #main-container {
 
 }
 
+#signedIn {
+
+  display: inline-block;
+  margin-left: 275px;
+
+}
+
 #activiFeed {
 
   display: flex;
