--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -53,6 +53,10 @@
             Effort
         </button>
 
+        <div id="signedIn">
+        <button type="button" class="btn btn-primary">Signed in as: <span class="badge badge-light" id="signedinAs">Bob</span>
+</button>
+        </div>
 
         <div class="modal fade" id="addEffortModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
@@ -98,6 +102,7 @@
                             </div>
 
                         </form>
+
 
                     </div>
                 </div>
