--- a/views/events.handlebars
+++ b/views/events.handlebars
@@ -6,17 +6,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav m-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="/home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Profile</a>
+                    <a class="nav-link" href="/profile">Profile</a>
                 </li>
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
-                </li>
+                </li> --}}
                 <div id="signoutButt">
                 <button type="button" class="btn btn-outline-warning">Sign Out</button>
                 </div>
