--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,12 +14,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/profile">Profile</a>
                 </li>
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
-                </li>
+                </li> --}}
                 <div id="signoutButt">
                     <button type="button" class="btn btn-outline-warning">Sign Out</button>
                 </div>
