--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,12 +8,12 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/home">Home</a>
                 </li>
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
-                </li>
+                </li> --}}
             </ul>
         </div>
     </nav>
