--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -54,7 +54,7 @@
         </button>
 
         <div id="signedIn">
-        <button type="button" class="btn btn-primary">Signed in as: <span class="badge badge-light" id="signedinAs">Bob</span>
+        <button type="button" class="btn btn-primary">Signed in as: <span class="badge badge-light" id="signedinAs">{{user}}</span>
 </button>
         </div>
 
