added editProfile modal

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -107,12 +107,15 @@ html, body, #main-container {
   color: navy;
 }
 
-#addFriendButton {
-  margin: 10px;
-
+#addFriendButton, #editProfileButton, #nameButton {
+  margin: 10px;  
   /* toggle visibility based on whether addFriend option is available*/
   
   /* visibility: hidden; */
+}
+
+#nameButton {
+  width: 100%;
 }
 
 /* #categoriesInput {
