--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,13 +25,22 @@
     <div class="row">
 
         <div class="col-md-3">
-            <img id="profilePhoto" src="http://lorempixel.com/output/abstract-q-c-350-250-1.jpg" alt="The is the alt text">
+            <img id="profilePhoto" src="http://lorempixel.com/output/abstract-q-c-350-250-1.jpg" alt="Profile photo unavailable">
 
         </div>
 
         <div class="col-md-9">
             <div class="row">
-                <button id="addFriendButton" type="button" class="btn btn-success">Add Friend</button>
+                <div class="col-2">
+                    <button id="addFriendButton" type="button" class="btn btn-success">Add Friend</button>
+                </div>
+                <div class="col-8">
+                    <!--username should go here-->
+                    <button id="nameButton" type="button" class="btn btn-secondary btn-lg" disabled><span id="userNameDisplay">FirstName LastName</span></button>
+                </div>
+                <div class="col-2">
+                    <button id="editProfileButton" type="button" class="btn btn-info" data-toggle="modal" data-target="#editProfileModal">Edit Profile</button>
+                </div>
             </div>
 
             <div class="row">
@@ -41,6 +50,52 @@
         </div>
 
     </div>
+
+
+
+    <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit Profile</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+
+<!--value attributes in the edit profile form should be user's current values-->
+                    <form id="editProfileForm">
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">UserName</label>
+                            <input class="form-control" id="userNameInput" maxlength="30"
+                                placeholder="" value="this is what's currently in there">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Link to Photo</label>
+                            <input class="form-control" id="profilePhotoInput" value="put the current link here">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect2">Bio</label>
+                            <textarea class="form-control" id="bioInput" rows="5" maxlength="500"
+                                placeholder="Tell us about yourself!">{{bio}}</textarea>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button id="cancelProfileChanges" type="submit" class="btn btn-secondary">Cancel</button>
+                            <button id="saveProfile" type="submit" class="btn btn-primary">Save Profile</button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <div id="activiFeed">
         <div class="list-group">
