--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <script src="js/home.js"></script>
 
 
-<div id="main-container">
+<div id="main-container1">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">
 
