--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,6 +5,14 @@ html, body, {
   
 }
 
+.container1 {
+
+  background-image: url(https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/211195/5000/3333/m1/fpnw/wm1/abstract-background-of-cells-br1-.jpg?1413646058&s=76e1a3a89484099bc6c46f0c24ac5a7f);
+  background-size: cover;
+
+
+}
+
 #main-container {
 
   background-image: url(https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/238538/5000/3333/m1/fpnw/wm1/abstract-background-of-hexagonal-cells-gradient1-.jpg?1416235816&s=f079cf4fda00a7fa34b30650015b9177);
