--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <script src="js/profile.js"></script>
 
-<div class="container">
+<div class="container1">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">
 
