--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -118,6 +118,7 @@
                 <a class="list-group-item list-group-item-action" id="listItem">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1" id="activiTitle">{{header}}</h5>
+                        <small>{{name}}</small>
                         <small>{{updatedAt}}</small>
                     </div>
                     <p class="mb-1">{{description}}</p>
