--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -39,7 +39,8 @@
                     <button id="nameButton" type="button" class="btn btn-secondary btn-lg" disabled><span id="userNameDisplay">{{userName}}</span></button>
                 </div>
                 <div class="col-2">
-                    <button id="editProfileButton" type="button" class="btn btn-info" data-toggle="modal" data-target="#editProfileModal">Edit Profile</button>
+                    <button id="editProfileButton" type="button" class="btn btn-info" data-toggle="modal" data-target="#editProfileModal">Edit
+                        Profile</button>
                 </div>
             </div>
 
@@ -65,12 +66,11 @@
                 </div>
                 <div class="modal-body">
 
-<!--value attributes in the edit profile form should be user's current values-->
+                    <!--value attributes in the edit profile form should be user's current values-->
                     <form id="editProfileForm">
                         <div class="form-group">
                             <label for="exampleFormControlInput1">UserName</label>
-                            <input class="form-control" id="userNameInput" maxlength="30"
-                                placeholder="">
+                            <input class="form-control" id="userNameInput" maxlength="30" placeholder="">
                         </div>
 
                         <div class="form-group">
@@ -80,8 +80,7 @@
 
                         <div class="form-group">
                             <label for="exampleFormControlSelect2">Bio</label>
-                            <textarea class="form-control" id="bioInput" rows="5" maxlength="500"
-                                placeholder="Tell us about yourself!">{{bio}}</textarea>
+                            <textarea class="form-control" id="bioInput" rows="5" maxlength="500" placeholder="Tell us about yourself!">{{bio}}</textarea>
                         </div>
 
                         <div class="modal-footer">
@@ -103,6 +102,7 @@
             <a class="list-group-item list-group-item-action" id="listItem">
                 <div class="d-flex w-100 justify-content-between">
                     <h5 class="mb-1" id="activiTitle">{{header}}</h5>
+                    <small>{{name}}</small>
                     <small>{{updatedAt}}</small>
                 </div>
                 <p class="mb-1">{{description}}</p>
