final style fix

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -15,6 +15,7 @@ html, body {
 
 #main-container {
   /* max-height: 500%; */
+  height:100%;
   background-image: url(https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/238538/5000/3333/m1/fpnw/wm1/abstract-background-of-hexagonal-cells-gradient1-.jpg?1416235816&s=f079cf4fda00a7fa34b30650015b9177);
   background-size: cover;
 
